Saint Support Update

--- a/Frame/Layout/3_Content/BSupport/Letter/phillip.html
+++ b/Frame/Layout/3_Content/BSupport/Letter/phillip.html
@@ -4,15 +4,15 @@
             <div class="content-inner">
                 <!--Contain-->
                 <div class="container-fluid">
-<!--Letter Menu-->
+                    <!--Letter Menu-->
                     <section class=" panel-default panel-body comment-content">
                         <section class="panel panel-default panel-body">
                         <div class="panel-heading">
-                            <h6 class="panel-title tc">Phillip is able to receive letters.</h6></div></section></section>
-                    <section aria-label="MHWrl" class="comment-content">
+                            <h6 class="panel-title tc">Philip is able to receive letters.</h6></div></section></section>
+                    <section aria-label="PHWrl" class="comment-content">
                         <h5>Send a Letter</h5>
                         <h5> Letters must contain your return address or they won't be received.</h5></section>
-<!--Letter-->
+                    <!--Letter-->
                     <section class="panel panel-default panel-body">
                         <div id="prisoner_mail_letter"><div id="prisoner_mail_letter_top"><div id="prisoner_mail_letter_return">
                                     <p>Your Full Name<br>
@@ -28,9 +28,9 @@
                                     4975 Suben, AUSTRIA
                                 </p></div></div></div>
                         </section></div></div>
-<!--Write Letter-->
+            <!--Write Letter-->
             <div class="panel panel-default">
-                <div class="panel-heading">
+                <div class="panel-heading readicon SHFREAD">
                     <h3 class="panel-title tc">
                         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#LettG">Basic Commonsense Guide Rules</a></h3></div></div>
     </div></section>
