--- a/Frame/Layout/3_Content/BSupport/Send/phillip.html
+++ b/Frame/Layout/3_Content/BSupport/Send/phillip.html
@@ -4,12 +4,12 @@
             <div class="content-inner">
                 <!--Contain-->
                 <div class="container-fluid">
-<!--Letter Menu-->
+<!--Send Menu-->
                     <section class="panel-default panel-body comment-content">
                         <section class="panel panel-default panel-body">
                         <div class="panel-heading">
-                            <h6 class="panel-title tc">Phillip is able to receive Prison Commissary.</h6></div></section></section>
-                    <section aria-label="MHWrl" class="comment-content tc">
+                            <h6 class="panel-title tc">Philip is able to receive Prison Commissary.</h6></div></section></section>
+                    <section aria-label="PBWrl" class="comment-content tc">
                         <hgroup>
                             <h5>Wire transfers:</h5>
                             <h5>[Must include his name, ID + DOB as a note]</h5></hgroup>  
@@ -50,10 +50,8 @@
                             <textarea id="bitcoin_hcoin">1NBG9MSBF363t8J4r9LMYakhjZMnd58Y7N</textarea></p>
                         <span>&nbsp;</span>
                     </section></div>
-
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title tc">
                         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#CommisG">More</a></h3></div></div>
-
     </div></div></section>
