--- a/Frame/Layout/3_Content/BSupport/bowerPro.html
+++ b/Frame/Layout/3_Content/BSupport/bowerPro.html
@@ -1,24 +1,55 @@
-<!--Bio -->
-                <section aria-label="DRBio" class="comment-content">
-                <h4>Robert Gregory Bowers</h4>
-            <!--Figure -->
-                <figure id="RobertBowerz" class="clearfix">
-                    <span class="img-responsive col-xl-6 col-lg-6 col-md-6 col-sm-6 center-block saint-sd sd-BowerOpticss">&nbsp;</span>
-                    <figcaption id="RobertBio" class="col-xl-6 col-lg-6 col-md-6 col-sm-6"><br>
-                        <table class="data no-wrap">
-                                <tr>
-                                    <th>Birthday</th>
-                                    <td>September 4, 1972</td></tr>
-                                <tr>
-                                    <th>Act</th>
-                                    <td>October 27, 2018</td></tr>
-                                <tr>
-                                    <th>Convicted</th>
-                                    <td>No</td></tr>
-                                <tr>
-                                    <th>Sentenced</th>
-                                    <td>Trial April 24, 2023</td></tr>
-                        </table></figcaption></figure>
+<!--Top BowersPro-->
+<section aria-label="bowerproTop">
+    <div class="panel-default">
+        <!--Name -->
+        <section aria-label="BowerBio" class="panel-default panel-body comment-content">
+            <section class="panel panel-default panel-body">
+                <div class="panel-heading">
+                    <hgroup class="panel-title tc">
+                        <h6>Robert Gregory Bowers</h6>
+                        <h5>aka Optics</h5></hgroup></div></section>
+            <!--Box-->
+            <div class="content panel panel-default panel-body">
+                <div class="content-inner">
+                    <section aria-label="BowerArray" class="cat-main-box">
+                        <!--Contain-->
+                        <div class="container-fluid">
+                            <div class="clearfix"></div>
+                            <div class="row panel-row tc">
+                                <!--Bowers Image-->
+                                <figure aria-label="RBowers"> 
+                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                                        <div class="panel">
+                                            <div class="panel-body">
+                                                <span class="img-responsive center-block saint-sd ss-BowerOpticss">&nbsp;</span></div></div></div>
+                                    <!--Earnest Brief-->
+                                    <figcaption aria-label="EarnestBio"> 
+                                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                                            <div class="panel">
+                                                <div class="panel-body">
+                                                     <table class="dltab data no-wrap" style="width: 300px; height: 300px;">
+                                                        <tr>
+                                                            <th>Birthday</th>
+                                                            <td class="yelloOn">September 4, 1972</td></tr>
+                                                        <tr>
+                                                            <th>Act</th>
+                                                            <td class="yelloOn">October 27, 2018</td></tr>
+                                                        <tr>
+                                                            <th>Convicted</th>
+                                                            <td class="yelloOn">TBD<br>{State}</td>
+                                                            <td class="yelloOn">June 16, 2023<br>{Federal}</td></tr>
+                                                        <tr>
+                                                            <th>Sentenced</th>
+                                                            <td class="yelloOn">TBD<br>{State}</td>
+                                                            <td class="yelloOn">August 2, 2023<br>{Federal}</td></tr>
+                                                        <tr>    
+                                                            <th>Release Date</th>
+                                                            <td class="yelloOn">Death</td></tr>
+                                                            </table></div></div></div>
+                                                </figcaption></figure>
+                                    </div></div></section></div>
+                <div class="clearfix"></div>
 <!--Summary-->
-                <section aria-label="RGBSumm" class="comment-content">
-                    <p>Robert Gregory Bowers, of Baldwin, P.A., an avowed White Nationalist, </p></section></section>
+                <div class="panel-default panel-body tc">
+                    <p>Robert Gregory Bowers, of Baldwin, P.A., an avowed White Nationalist,</p></div></div>
+        </section></div></section>
