--- a/Frame/Layout/3_Content/BSupport/earnestPro.html
+++ b/Frame/Layout/3_Content/BSupport/earnestPro.html
@@ -1,30 +1,58 @@
-<!--Bio -->
-                <section aria-label="JEBio" class="comment-content">
-                <h4>John Timothy Earnest</h4>
-            <!--Figure -->
-                <figure id="JohnEarnest" class="clearfix">
-                    <span class="img-responsive col-xl-6 col-lg-6 col-md-6 col-sm-6 center-block saint-sd sd-EarnestLetterss">&nbsp;</span>
-                    <figcaption id="EarnestBio" class="col-xl-6 col-lg-6 col-md-6 col-sm-6"><br>
-                        <table class="data no-wrap">
-                                <tr>
-                                    <th>Birthday</th>
-                                    <td>June 8, 1999</td></tr>
-                                <tr>
-                                    <th>Act</th>
-                                    <td>April 27, 2019</td></tr>
-                                <tr>
-                                    <th>Convicted</th>
-                                    <td>April 30, 2019</td></tr>
-                                <tr>
-                                    <th>Sentenced</th>
-                                    <td>September 30, 2021(State)<br><br>
-                                    December 28, 2021(Federal)
-                                </td></tr>
-                        </table></figcaption></figure>
+<!--Top EarnestPro-->
+<section aria-label="earnestproTop">
+    <div class="panel-default">
+        <!--Name -->
+        <section aria-label="JEBio" class="panel-default panel-body comment-content">
+            <section class="panel panel-default panel-body">
+                <div class="panel-heading">
+                    <hgroup class="panel-title tc">
+                        <h6>John Timothy Earnest</h6>
+                        <h5>aka </h5></hgroup></div></section>
+            <!--Box-->
+            <div class="content panel panel-default panel-body">
+                <div class="content-inner">
+                    <section aria-label="EarnestArray" class="cat-main-box">
+                        <!--Contain-->
+                        <div class="container-fluid">
+                            <div class="clearfix"></div>
+                            <div class="row panel-row tc">
+                                <!--Earnest Image-->
+                                <figure aria-label="JEarnest"> 
+                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                                        <div class="panel">
+                                            <div class="panel-body">
+                                                <span class="img-responsive center-block saint-sd ss-EarnestLetterss">&nbsp;</span></div></div></div>
+                                    <!--Earnest Brief-->
+                                    <figcaption aria-label="EarnestBio"> 
+                                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                                            <div class="panel">
+                                                <div class="panel-body">
+                                                     <table class="dltab data no-wrap" style="width: 300px; height: 300px;">
+                                                            <tr>
+                                                                <th>Birthday</th>
+                                                                <td class="yelloOn">June 8, 1999</td></tr>
+                                                            <tr>
+                                                                <th>Act</th>
+                                                                <td class="yelloOn">April 27, 2019</td></tr>
+                                                            <tr>
+                                                                <th>Convicted</th>
+                                                                <td class="yelloOn">April 30, 2019</td></tr>
+                                                            <tr>
+                                                                <th>Sentenced</th>
+                                                                <td class="yelloOn">September 30, 2021<br>{State}</td>
+                                                                <td class="yelloOn">December 28, 2021<br>{Federal}</td></tr>
+                                                            <tr>    
+                                                                <th>Release Date</th>
+                                                                <td class="yelloOn">Never</td></tr>
+                                                            </table></div></div></div>
+                                                </figcaption></figure>
+                                    </div></div></section></div>
+                <div class="clearfix"></div>
 <!--Summary-->
-                <section aria-label="JESumm" class="comment-content">
-                    <p>John Timothy Earnest, of San Diego C.A. (Rancho Peñasquitos), 
-                    September 30, 2021(State - Life + 127 years)<br>
+                <div class="panel-default panel-body tc">
+                    <p>John Timothy Earnest, of San Diego C.A. (Rancho Peñasquitos),<br> 
+                    September 30, 2021(State - Life + 137 years)<br>
                     December 28, 2021(Federal - Life + 30)<br>
                     (federal and state life sentences would run one after the other instead of concurrently)
-                    </p></section></section>
+                    </p></div></div>
+        </section></div></section>
