--- a/Frame/Layout/3_Content/BSupport/halePro.html
+++ b/Frame/Layout/3_Content/BSupport/halePro.html
@@ -1,31 +1,57 @@
-<!--Bio -->
-                <section aria-label="MHBio" class="comment-content">
-                <h4>Matthew F Hale</h4>
-            <!--Figure -->
-                <figure id="MattHale" class="clearfix">
-                    <span class="img-responsive col-xl-6 col-lg-6 col-md-6 col-sm-6 center-block saint-sd sd-Halesss">&nbsp;</span>
-                    <figcaption id="HaleBio" class="col-xl-6 col-lg-6 col-md-6 col-sm-6"><br>
-                        <table class="data no-wrap">
-                                <tr>
-                                    <th>Birthday</th>
-                                    <td>July 27, 1971</td></tr>
-                                <tr>
-                                    <th>Act</th>
-                                    <td>March 2000-January 8, 2003</td></tr>
-                                <tr>
-                                    <th>Convicted</th>
-                                    <td>Yes - April 6, 2005</td></tr>
-                                <tr>
-                                    <th>Sentenced</th>
-                                    <td>40 Years</td>
-                                    <th>Release Date</th>
-                                    <td>April 2, 2036</tr>
-                        </table></figcaption></figure>
-<!--Summary-->
-                <section aria-label="MHSumm" class="comment-content">
+<!--Top HalePro-->
+<section aria-label="haleproTop">
+    <div class="panel-default">
+        <!--Name -->
+        <section aria-label="MHBio" class="panel-default panel-body comment-content">
+            <section class="panel panel-default panel-body">
+                <div class="panel-heading">
+                    <hgroup class="panel-title tc">
+                        <h6>Matthew F Hale</h6>
+                        <h5>aka Matt Hale</h5></hgroup></div></section>
+            <!--Box-->
+            <div class="content panel panel-default panel-body">
+                <div class="content-inner">
+                    <section aria-label="HaleArray" class="cat-main-box">
+                        <!--Contain-->
+                        <div class="container-fluid">
+                            <div class="clearfix"></div>
+                            <div class="row panel-row tc">
+                                <!--Hale Image-->
+                                <figure aria-label="MHale"> 
+                                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                                        <div class="panel">
+                                            <div class="panel-body">
+                                                <span class="img-responsive center-block saint-sd ss-Haless">&nbsp;</span></div></div></div>
+                                    <!--Hale Brief-->
+                                    <figcaption aria-label="HaleBio"> 
+                                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                                            <div class="panel">
+                                                <div class="panel-body">
+                                                     <table class="dltab data no-wrap" style="width: 300px; height: 300px;">
+                                                            <tr>
+                                                                <th>Birthday</th>
+                                                                <td class="yelloOn">July 27, 1971</td></tr>
+                                                            <tr>
+                                                                <th>Act</th>
+                                                                <td class="yelloOn">March 2000-<br>January 8, 2003</td></tr>
+                                                            <tr>
+                                                                <th>Convicted</th>
+                                                                <td class="yelloOn"> April 2004</td></tr>
+                                                            <tr>
+                                                                <th>Sentenced</th>
+                                                                <td class="yelloOn">April 6, 2005<br>(40 Years)</td></tr>
+                                                            <tr>    
+                                                                <th>Release Date</th>
+                                                                <td class="yelloOn">April 2, 2036</td></tr>
+                                                            </table></div></div></div>
+                                                </figcaption></figure>
+                                    </div></div></section></div>
+                <div class="clearfix"></div>
+                <!--Summary-->
+                <div class="panel-default panel-body tc">
+                    <h5 class="bh">Bio</h5>
                     <p>Matthew F. Hale, of East Peoria, I.L., was born July 27th 1971. Hale was the head of the explicitly racial World Church of the Creator in East Peoria, Illinois. He was stripped of his law license for his racial beliefs. The FBI would embed an informant into his organization and began trying to entrap him.</p> 
-
                     <p>The informant attempted to get him on tape soliciting murder but each time Hale refused to go along. Eventually the government would do what the government does and simply lie claiming he did so anyways and played tapes of him using "racist language" and "making a joke" to convict him.</p>
-
                     <p>Hale was sentenced to 40 years in ADX Florence USP - where he currently is serving his time at USP Marion, a medium-security institution in Illinois until his release in April 2, 2036 in which he would be 64 years old.</p>
-                </section></section>
+                </div></div>
+        </section></div></section>
