--- a/Frame/Layout/6_ReadMore/BSupport/earnestinfowrap.html
+++ b/Frame/Layout/6_ReadMore/BSupport/earnestinfowrap.html
@@ -1,4 +1,18 @@
+<!--InfoWrap Open -->
+    <div class="panel-body">
+        <section class="content" aria-label="saintwrapp">
+            <div class="panel-footy panel-default tc">
+<!--Header -->
+                <hgroup>
+                    <h2 class="icon9add icon9-info-sign text-primary" style="font-size:40px"></h2>
+                    <h4>o/ Earnest</h4></hgroup>
+                <p class="text-muted">We dont need anymore martyrs.<br>We dont need anymore lost Brothers or Sisters.</p><p class="text-muted"> What we do need is to make sure our boys did not sacrifice and have given it all up in vain.<br> 
+                Give them an o/ and love.</p>  
+            </div></section>               
+<!--Quote-->
                 <div class="panel_row">
                     <div class="blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
                     <p class="section-heading text-muted"><u>"To my brothers in blood.</u> Make sure that my sacrifice was not in vain.<br> 
-                    Spread this <u>letter, make memes, shitpost, FIGHT BACK"</u></p></div></div>
+                    Spread this <u>letter, make memes, shitpost, FIGHT BACK"</u><span class="text-muted">-Earnest</span></p></div>
+<!--InfoWrap Close -->
+    </div></div>
