--- a/Frame/Layout/3_Content/BSupport/Letter/earnest.html
+++ b/Frame/Layout/3_Content/BSupport/Letter/earnest.html
@@ -1,19 +1,37 @@
-    <!--Letter-->
-                <div id="prisoner_mail_letter">
-                    <div id="prisoner_mail_letter_top">
-                        <div id="prisoner_mail_letter_return">
-                            <p>Your Full Name<br>
-                            Your Street Address<br>
-                            City, State, Zipcode</p></div>
-                        <div id="prisoner_mail_letter_stamp">
-                            <span class="right-block mailstamp">&nbsp;</span></div></div>
-                    <div id="prisoner_mail_letter_bottom">
-                        <div id="prisoner_mail_letter_address">
-                            <p class="tc">
-                                John T. Earnest<br>
-                                BP9253<br>
-                                Pleasant Valley State Prison<br>
-                                P.O. Box 8500<br>
-                                Coalinga, CA 93210<br>
-                            </p></div></div>
-                        </div><br>
+<!--Top Letter-->
+    <section aria-label="JELetterTop">
+        <div class="panel-default">
+            <div class="content-inner">
+                <!--Contain-->
+                <div class="container-fluid">
+                    <!--Letter Menu-->
+                    <section class=" panel-default panel-body comment-content">
+                        <section class="panel panel-default panel-body">
+                        <div class="panel-heading">
+                            <h6 class="panel-title tc">John is able to receive letters.</h6></div></section></section>
+                    <section aria-label="SEWrl" class="comment-content">
+                        <h5>Send a Letter</h5>
+                        <h5> Letters must contain your return address or they won't be received.</h5></section>
+                    <!--Letter-->
+                    <section class="panel panel-default panel-body">
+                        <div id="prisoner_mail_letter"><div id="prisoner_mail_letter_top"><div id="prisoner_mail_letter_return">
+                                    <p>Your Full Name<br>
+                                    Your Street Address<br>
+                                    City, State, Zipcode</p></div>
+                                <div id="prisoner_mail_letter_stamp">
+                                    <span class="right-block mailstamp">&nbsp;</span></div></div>
+                            <div id="prisoner_mail_letter_bottom"><div id="prisoner_mail_letter_address">
+                                <p class="tc">
+                                    John T. Earnest<br>
+                                    BP9253<br>
+                                    Pleasant Valley State Prison<br>
+                                    P.O. Box 8500<br>
+                                    Coalinga, CA 93210<br>
+                                </p></div></div></div>
+                        </section></div></div>
+            <!--Write Letter-->
+            <div class="panel panel-default">
+                <div class="panel-heading readicon SHFREAD">
+                    <h3 class="panel-title tc">
+                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#LettG">Basic Commonsense Guide Rules</a></h3></div></div>
+    </div></section>
