--- a/Frame/Layout/3_Content/BSupport/philliPro.html
+++ b/Frame/Layout/3_Content/BSupport/philliPro.html
@@ -47,6 +47,7 @@
                                                 </figcaption></figure>
                                     </div></div></section></div>
                 <div class="clearfix"></div>
+                <!--Summary-->
                 <div class="panel-default panel-body tc">
                     <h5 class="bh">Bio</h5>
                     <p>Philip Hassler of Austria, was born Dec 28th 1986. Phillip whims stage name you may know him by Mr.Bond was arrested on January 20, 2021 for making music. Philip has been prosecuted and sentenced to 10 years for producing and spreading Nazi ideas and inciting hatred.</p></div></div>
