--- a/Frame/Layout/3_Content/BSupport/bowerPro.html
+++ b/Frame/Layout/3_Content/BSupport/bowerPro.html
@@ -51,5 +51,10 @@
                 <div class="clearfix"></div>
 <!--Summary-->
                 <div class="panel-default panel-body tc">
-                    <p>Robert Gregory Bowers, of Baldwin, P.A., an avowed White Nationalist,</p></div></div>
+                    <p>Robert Gregory Bowers, of Baldwin, P.A., an avowed White Nationalist<br>
+                    whom went to war against HIAS to protect the border was sentenced to<br>
+                    TBD(State - TBD)
+                    August 2, 2023(Federal - Death)<br>
+                    (State is still pending)<br><br>
+                    Bowers is tackeling strategic legal aspects highlighting his war against HIAS not jews, which may not seem like a big deal, until it forces a different set of talking points and seeing as the State has not moved forward shows the impact Bowers is making. Not to mention his appeal in the Fed Case rest on the very same. Bower Optics are powerful.</p></div></div>
         </section></div></section>
