--- a/Frame/Layout/6_ReadMore/saintinfowrap.html
+++ b/Frame/Layout/6_ReadMore/saintinfowrap.html
@@ -19,7 +19,7 @@
                 <div class="panel">
                     <div class="panel-body">
                         <div class="btn-1 center-block">
-                            <a style="center" onclick="window.open('../../B-Topic/Support/MRBond','_blank'); return false;"><span>Mr.Bond</span></a></div> 
+                            <a style="center" onclick="window.open('../../B-Topic/Support/MrBond','_blank'); return false;"><span>Mr.Bond</span></a></div> 
                     </div></div></section>
             <section aria-label="RoofSaint" class="col-xl-3 col-lg-3 col-md-3 col-sm-4">
                 <div class="panel">
